--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs</title>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6441782123701736" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="/your-repo-name/_nuxt/entry.C04LTJtf.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/your-repo-name/_nuxt/CVECWm9d.js">
-<link rel="prefetch" as="style" crossorigin href="/your-repo-name/_nuxt/error-404.4oxyXxx0.css">
-<link rel="prefetch" as="script" crossorigin href="/your-repo-name/_nuxt/sXxnfDox.js">
-<link rel="prefetch" as="script" crossorigin href="/your-repo-name/_nuxt/Bo2EUMMh.js">
-<link rel="prefetch" as="style" crossorigin href="/your-repo-name/_nuxt/error-500.CZqNkBuR.css">
-<link rel="prefetch" as="script" crossorigin href="/your-repo-name/_nuxt/DG7Vg0-m.js">
+<link rel="stylesheet" href="/_nuxt/entry.C1Mf5H5n.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Bogji2Ua.js">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.CkhVpEVu.css">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/L8BIp0Ic.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DpwA_pjF.js">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.CwWdQP5R.css">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CSb0_4km.js">
 <meta name="description" content="Free online PDF tools. Convert PDF to Word, Word to PDF, merge PDFs, split PDFs, and more. No registration required, 100% free and secure.">
 <meta name="keywords" content="PDF converter, PDF to Word, Word to PDF, merge PDF, split PDF, free PDF tools, online PDF editor">
 <meta name="author" content="FreeToPDF">
@@ -27,6 +27,6 @@
 <meta name="msapplication-TileColor" content="#1976d2">
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
 <link rel="canonical" href="https://freetopdf.com">
-<script type="module" src="/your-repo-name/_nuxt/CVECWm9d.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1755009292371,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/your-repo-name/",buildId:"99f0684c-ef99-4dd5-8f96-159a5f2465cd",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/Bogji2Ua.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1755182886155,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/",buildId:"5c8d8008-ed47-41ea-9b6a-89aa10fb1041",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
