--- a/index.html
+++ b/index.html
@@ -28,5 +28,5 @@
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
 <link rel="canonical" href="https://freetopdf.com">
 <script type="module" src="/zupdfWeb/_nuxt/DDiZUtB7.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1756205026418,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:true,nodeEnv:"production"},app:{baseURL:"/zupdfWeb/",buildId:"54d118a5-2169-4e2e-adef-3d48cd3cac66",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1756205627789,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:true,nodeEnv:"production"},app:{baseURL:"/zupdfWeb/",buildId:"b8a7a871-003e-4e86-93f1-12dd8a8d4483",buildAssetsDir:"_nuxt/",cdnURL:""}}</script></body></html>
