--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs</title>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6441782123701736" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="/freetopdf/_nuxt/entry.C1Mf5H5n.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/freetopdf/_nuxt/DDiZUtB7.js">
-<link rel="prefetch" as="style" crossorigin href="/freetopdf/_nuxt/error-404.CkhVpEVu.css">
-<link rel="prefetch" as="script" crossorigin href="/freetopdf/_nuxt/Ca3aXFku.js">
-<link rel="prefetch" as="script" crossorigin href="/freetopdf/_nuxt/o-n90YXp.js">
-<link rel="prefetch" as="style" crossorigin href="/freetopdf/_nuxt/error-500.CwWdQP5R.css">
-<link rel="prefetch" as="script" crossorigin href="/freetopdf/_nuxt/Cd66RdKg.js">
+<link rel="stylesheet" href="/_nuxt/entry.C1Mf5H5n.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CQi2DAuW.js">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.CkhVpEVu.css">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BlGDgmAy.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/WfXFa4Cf.js">
+<link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.CwWdQP5R.css">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BozIf7Yr.js">
 <meta name="description" content="Free online PDF tools. Convert PDF to Word, Word to PDF, merge PDFs, split PDFs, and more. No registration required, 100% free and secure.">
 <meta name="keywords" content="PDF converter, PDF to Word, Word to PDF, merge PDF, split PDF, free PDF tools, online PDF editor">
 <meta name="author" content="FreeToPDF">
@@ -27,6 +27,6 @@
 <meta name="msapplication-TileColor" content="#1976d2">
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
 <link rel="canonical" href="https://freetopdf.com">
-<script type="module" src="/freetopdf/_nuxt/DDiZUtB7.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1756206596842,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:true,nodeEnv:"production"},app:{baseURL:"/freetopdf/",buildId:"b385634e-2a6b-4794-b335-b1fa7b05013f",buildAssetsDir:"_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/CQi2DAuW.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1756808196589,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/",buildId:"3f10e9a6-9249-41d2-a61e-c41a5bc83f3e",buildAssetsDir:"_nuxt/",cdnURL:""}}</script></body></html>
