--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <title>FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs</title>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6441782123701736" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/_nuxt/entry.C1Mf5H5n.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CQi2DAuW.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BZR40qXE.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.CkhVpEVu.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BlGDgmAy.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/WfXFa4Cf.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/VwP3ktV9.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D2p4jgq9.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.CwWdQP5R.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BozIf7Yr.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D453Ixq1.js">
 <meta name="description" content="Free online PDF tools. Convert PDF to Word, Word to PDF, merge PDFs, split PDFs, and more. No registration required, 100% free and secure.">
 <meta name="keywords" content="PDF converter, PDF to Word, Word to PDF, merge PDF, split PDF, free PDF tools, online PDF editor">
 <meta name="author" content="FreeToPDF">
@@ -16,17 +16,22 @@
 <meta property="og:title" content="FreeToPDF - Free Online PDF Tools">
 <meta property="og:description" content="Convert PDF to Word, Word to PDF, merge PDFs and more. Free online PDF tools.">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://freetopdf.com">
-<meta property="og:image" content="/og-image.jpg">
+<meta property="og:url" content="https://test.freetopdf.com">
+<meta property="og:image" content="/og-image.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<meta property="og:image:alt" content="FreeToPDF - Free Online PDF Tools">
 <meta property="og:site_name" content="FreeToPDF">
 <meta name="twitter:card" content="summary_large_image">
 <meta name="twitter:title" content="FreeToPDF - Free Online PDF Tools">
 <meta name="twitter:description" content="Convert PDF to Word, Word to PDF, merge PDFs and more. Free online PDF tools.">
-<meta name="twitter:image" content="/og-image.jpg">
+<meta name="twitter:image" content="/og-image.png">
+<meta name="twitter:image:alt" content="FreeToPDF - Free Online PDF Tools">
 <meta name="theme-color" content="#1976d2">
 <meta name="msapplication-TileColor" content="#1976d2">
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
-<link rel="canonical" href="https://freetopdf.com">
-<script type="module" src="/_nuxt/CQi2DAuW.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1756808196589,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/",buildId:"3f10e9a6-9249-41d2-a61e-c41a5bc83f3e",buildAssetsDir:"_nuxt/",cdnURL:""}}</script></body></html>
+<link rel="apple-touch-icon" href="/apple-touch-icon.png">
+<link rel="canonical" href="https://test.freetopdf.com">
+<script type="module" src="/_nuxt/BZR40qXE.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1759317491742,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"http://localhost:8100",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/",buildId:"afe51dbb-e01f-4488-a306-0fd44d27cf69",buildAssetsDir:"_nuxt/",cdnURL:""}}</script></body></html>
