--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <title>FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs</title>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6441782123701736" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="/_nuxt/entry.C1Mf5H5n.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BZR40qXE.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CW-H5Tg8.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.CkhVpEVu.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/VwP3ktV9.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D2p4jgq9.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/oTK1KJxE.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DlUv_ELu.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.CwWdQP5R.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/D453Ixq1.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/j-51eqqu.js">
 <meta name="description" content="Free online PDF tools. Convert PDF to Word, Word to PDF, merge PDFs, split PDFs, and more. No registration required, 100% free and secure.">
 <meta name="keywords" content="PDF converter, PDF to Word, Word to PDF, merge PDF, split PDF, free PDF tools, online PDF editor">
 <meta name="author" content="FreeToPDF">
@@ -32,6 +32,6 @@
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 <link rel="canonical" href="https://test.freetopdf.com">
-<script type="module" src="/_nuxt/BZR40qXE.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1759317491742,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"http://localhost:8100",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/",buildId:"afe51dbb-e01f-4488-a306-0fd44d27cf69",buildAssetsDir:"_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/CW-H5Tg8.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1759318151865,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/",buildId:"f9af8f0d-15eb-4e68-a8e2-b2f6f9febfab",buildAssetsDir:"_nuxt/",cdnURL:""}}</script></body></html>
