--- a/index.html
+++ b/index.html
@@ -2,13 +2,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs</title>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6441782123701736" crossorigin="anonymous"></script>
-<link rel="stylesheet" href="/_nuxt/entry.C1Mf5H5n.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/gThNRfkz.js">
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.x/css/materialdesignicons.min.css">
+<link rel="stylesheet" href="/_nuxt/entry.CNeFOlFV.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/srEgzogS.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.CkhVpEVu.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Fj_H_RMC.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/nSuuGDiC.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BX7mDJ5O.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/DItgNnUP.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.CwWdQP5R.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/B-yZIOu9.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/D7VBdvVO.js">
 <meta name="description" content="Free online PDF tools. Convert PDF to Word, Word to PDF, merge PDFs, split PDFs, and more. No registration required, 100% free and secure.">
 <meta name="keywords" content="PDF converter, PDF to Word, Word to PDF, merge PDF, split PDF, free PDF tools, online PDF editor">
 <meta name="author" content="FreeToPDF">
@@ -32,6 +33,6 @@
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 <link rel="canonical" href="https://test.freetopdf.com">
-<script type="module" src="/_nuxt/gThNRfkz.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1759368998388,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/",buildId:"3fe344b2-d703-4f0f-851a-08c7a9df0a22",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/srEgzogS.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1759378430075,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/",buildId:"1de42cd0-1db1-4310-8ab7-8efd0950011b",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
