--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6441782123701736" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.x/css/materialdesignicons.min.css">
 <link rel="stylesheet" href="/_nuxt/entry.CNeFOlFV.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BHyku_WC.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/Cwn9sFny.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.CkhVpEVu.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/COERmO5a.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/DD8OgleZ.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BnWer-I_.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Cpzuvu_w.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.CwWdQP5R.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Ck5SIvK9.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/rIevDa7d.js">
 <meta name="description" content="Free online PDF tools. Convert PDF to Word, Word to PDF, merge PDFs, split PDFs, and more. No registration required, 100% free and secure.">
 <meta name="keywords" content="PDF converter, PDF to Word, Word to PDF, merge PDF, split PDF, free PDF tools, online PDF editor">
 <meta name="author" content="FreeToPDF">
@@ -33,6 +33,6 @@
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 <link rel="canonical" href="https://test.freetopdf.com">
-<script type="module" src="/_nuxt/BHyku_WC.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1759382520247,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/",buildId:"abaa6059-2137-477f-adad-f64c20032061",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/Cwn9sFny.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1759386165768,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/",buildId:"35c0d478-e911-4e84-b558-98ae315411af",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
