--- a/word-to-pdf/index.html
+++ b/word-to-pdf/index.html
@@ -3,13 +3,13 @@
 <title>FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs</title>
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6441782123701736" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.x/css/materialdesignicons.min.css">
-<link rel="stylesheet" href="/_nuxt/entry.CyADSr8r.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/rJqLcTGV.js">
+<link rel="stylesheet" href="/_nuxt/entry.B9XVr8qH.css" crossorigin>
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/DD77FeM_.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.CkhVpEVu.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dv6FETLG.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/6UkIYz4E.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/BInvP6Fu.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CrXyosqH.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.CwWdQP5R.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/BSbtYW7u.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/CQkzkXOT.js">
 <meta name="description" content="Free online PDF tools. Convert PDF to Word, Word to PDF, merge PDFs, split PDFs, and more. No registration required, 100% free and secure.">
 <meta name="keywords" content="PDF converter, PDF to Word, Word to PDF, merge PDF, split PDF, free PDF tools, online PDF editor">
 <meta name="author" content="FreeToPDF">
@@ -33,6 +33,11 @@
 <link rel="icon" type="image/x-icon" href="/favicon.ico">
 <link rel="apple-touch-icon" href="/apple-touch-icon.png">
 <link rel="canonical" href="https://www.freetopdf.com">
-<script type="module" src="/_nuxt/rJqLcTGV.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1760326522176,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/",buildId:"dbbf2f2e-2672-4f5d-84a7-f090729abafc",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="text/javascript">(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
+new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],
+j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
+'https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
+})(window,document,'script','dataLayer','GTM-TTBQTF4J');</script>
+<script type="module" src="/_nuxt/DD77FeM_.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1760332138573,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/",buildId:"55a99325-8fe9-490a-8964-77975202c700",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
