--- a/about/index.html
+++ b/about/index.html
@@ -5,12 +5,12 @@
 <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6441782123701736" crossorigin="anonymous"></script>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@mdi/font@7.x/css/materialdesignicons.min.css">
 <link rel="stylesheet" href="/_nuxt/entry.QNEwp8uE.css" crossorigin>
-<link rel="modulepreload" as="script" crossorigin href="/_nuxt/CZig_RTy.js">
+<link rel="modulepreload" as="script" crossorigin href="/_nuxt/BR04R-wq.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-404.CkhVpEVu.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/CWUCGNOe.js">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dql5vrhS.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dax8R8rU.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Bl2plrRg.js">
 <link rel="prefetch" as="style" crossorigin href="/_nuxt/error-500.CwWdQP5R.css">
-<link rel="prefetch" as="script" crossorigin href="/_nuxt/3MyliF7v.js">
+<link rel="prefetch" as="script" crossorigin href="/_nuxt/Dbjrl411.js">
 <meta name="description" content="Free online PDF tools. Convert PDF to Word, Word to PDF, merge PDFs, split PDFs, and more. No registration required, 100% free and secure.">
 <meta name="keywords" content="PDF converter, PDF to Word, Word to PDF, merge PDF, split PDF, free PDF tools, online PDF editor">
 <meta name="author" content="FreeToPDF">
@@ -43,6 +43,6 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 function gtag(){dataLayer.push(arguments);}
 gtag('js', new Date());
 gtag('config', 'G-S54JZW3JGB');</script>
-<script type="module" src="/_nuxt/CZig_RTy.js" crossorigin></script>
-<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1760684848264,false]</script>
-<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/",buildId:"672d05c0-76b5-487e-924d-9605e3ce29f5",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
+<script type="module" src="/_nuxt/BR04R-wq.js" crossorigin></script>
+<script id="unhead:payload" type="application/json">{"title":"FreeToPDF - Free Online PDF Tools | Convert, Merge, Split PDFs"}</script></head><body><div id="__nuxt"></div><div id="teleports"></div><script type="application/json" data-nuxt-data="nuxt-app" data-ssr="false" id="__NUXT_DATA__">[{"prerenderedAt":1,"serverRendered":2},1760690018733,false]</script>
+<script>window.__NUXT__={};window.__NUXT__.config={public:{apiUrl:"https://api.freetopdf.com",adsenseClientId:"ca-pub-6441782123701736",adsenseTestMode:false,nodeEnv:"production"},app:{baseURL:"/",buildId:"c24e39e1-eafb-4502-aca9-67faa8feb8f8",buildAssetsDir:"/_nuxt/",cdnURL:""}}</script></body></html>
